--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -156,6 +156,90 @@
    ]
   },
   {
+   "source": [
+    "### Featured Images"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit URL\n",
+    "url = 'https://spaceimages-mars.com'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find and click the full image button\n",
+    "full_image_elem = browser.find_by_tag('button')[1]\n",
+    "full_image_elem.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse the resulting html with soup\n",
+    "html = browser.html\n",
+    "img_soup = soup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'image/featured/mars3.jpg'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "# Find the relative image url\n",
+    "img_url_rel = img_soup.find('img', class_='fancybox-image').get('src')\n",
+    "img_url_rel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "# Use the base URL to create an absolute URL\n",
+    "img_url = f'https://spaceimages-mars.com/{img_url_rel}'\n",
+    "img_url"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
